Camlp5 Version 5.13:
--------------------

* [30 Jul 09] Added 'lazy' patterns (added in OCaml version 3.11).
* [09 Jun 09] Fixed bug in pr_r.cmo: did not always break after "in" (in
  "let..in" statements) even with -flag l.
* [08 Jun 09] Fixed bug in pr_r.cmo: missing case "#use" for structure and
  signature items.

Camlp5 Version 5.12:
--------------------

* [23 May 09] Added compatibility with OCaml 3.11.1.
* [31 Dec 08] In macros (pa_macro.cmo):
  - added ability to use IFDEF and IFNDEF for record labels declarations.

Camlp5 Version 5.11:
--------------------

* [19 Dec 08] Added compatibility with OCaml 3.12.0.

Camlp5 Version 5.10:
--------------------

* [16 Oct 08] Added compatibility with OCaml 3.11.0.
* [01 Aug 08] Added flag "Plexer.utf8_lexing" to specify that the lexers
  built by "Plexer.gmake ()" must consider the input as utf-8 encoded.

Camlp5 Version 5.09:
--------------------

* [05 Jun 08] Changed all '#!/bin/bash" in shells scripts into '#!/bin/sh'
  and changed all $(...) into `...` because there are compatibilities
  problems according to Unix versions.
* [31 Mar 08] Fixed bug: "let f ~_x () = ()" generated syntax error.
* [31 Mar 08] Fixed bug: "x $ y" generated syntax error (normal syntax).
* [02 Jan 08] Added compatibility with OCaml 3.10.3.

Camlp5 Version 5.08:
--------------------

* [08 Feb 08] Fixed bug in normal syntax: a.{x,y} (access to big array) was
  interpreted as a.{(x,y)}.
* [22 Jan 08] Added missing cases in printers pr_o and pr_r which displayed
  the message "unable to print ...".
* [02 Jan 08] Added compatibility with OCaml 3.09.4 and 3.10.2.
* [21 Jan 08] Fixed bug under windows: the file META could not be build
  if the library path name contained colons.
* [13 Jan 08] Added missing man page for camlp5sch (link to the same man
  page as camlp5).
* [05 Jan 08] Added "pr_extprint.cmo", printer rebuilding EXTEND_PRINTER
  statements in their original syntax.