@@ -13,6 +13,8 @@ open Asttypes;;
 
 (* *)
 
+(* *)
+
 let ov = Sys.ocaml_version in
 let oi =
   let rec loop i =
@@ -464,7 +466,8 @@ let rec patt =
           let c2 = char_of_char_token loc2 (uv c2) in mkrangepat loc c1 c2
       | _ -> error loc "range pattern allowed only for characters"
       end
-  | PaRec (loc, lpl) -> mkpat loc (Ppat_record (List.map mklabpat (uv lpl)))
+  | PaRec (loc, lpl) ->
+      mkpat loc (Ppat_record (List.map mklabpat (uv lpl), Closed))
   | PaStr (loc, s) ->
       mkpat loc
         (Ppat_constant (Const_string (string_of_string_token loc (uv s))))
