@@ -33,4 +33,6 @@ type mutable_flag = Immutable | Mutable
 
 type virtual_flag = Virtual | Concrete
 
+type closed_flag = Closed | Open
+
 type label = string
