@@ -20,4 +20,5 @@ type t =
   | Lapply of t * t
 
 val flatten: t -> string list
+val last: t -> string
 val parse: string -> t
