@@ -1,3 +1,3 @@
 let ocaml_version = "3.12.0"
-let ast_impl_magic_number = "Caml1999M012"
-let ast_intf_magic_number = "Caml1999N011"
+let ast_impl_magic_number = "Caml1999M013"
+let ast_intf_magic_number = "Caml1999N012"
