@@ -23,6 +23,7 @@ type t =                             (* A is all *)
   | Labels_omitted                   (* L *)
   | Method_override of string list   (* M *)
   | Partial_match of string          (* P *)
+  | Non_closed_record_pattern of string (* R *)
   | Statement_type                   (* S *)
   | Unused_match                     (* U *)
   | Unused_pat
